--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Install rust toolchain
         run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
 
+      - name: Install dependencies
+        run: >-
+          sudo apt update && sudo apt install
+          libasound2-dev
+
       - name: Cargo build
         run: cargo build -r --features ega
 
