--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -29,6 +29,7 @@ jobs:
         run: >-
           sudo apt update && sudo apt install
           libasound2-dev
+          libudev-dev
 
       - name: Cargo build
         run: cargo build -r --features ega
